# InflationTracker

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: pages.yml
config/: series.yml  settings.yml
data/curated/: data_quality.json  dim_series.parquet  fact_observation.parquet
data/raw/2026-07-14/: AVG.INTWO.json  BD.CDN.10YR.DQ.YLD.json  BD.CDN.2YR.DQ.YLD.json  BD.CDN.5YR.DQ.YLD.json  CPI_TRIM.json  V39079.json
data/raw/2026-07-15/: AVG.INTWO.json  BD.CDN.10YR.DQ.YLD.json  BD.CDN.2YR.DQ.YLD.json  BD.CDN.5YR.DQ.YLD.json  CPI_COMMON.json  CPI_MEDIAN.json  STATIC_TOTALCPICHANGE.json  V122667780.json  V39079.json
docs/superpowers/plans/: 2026-07-14-inflation-tracker-pipeline.md  2026-07-15-inflation-tracker-dashboard.md  2026-07-16-revision-diff.md  2026-07-17-plan-3b-a11y-frca.md
docs/superpowers/specs/: 2026-07-14-inflation-tracker-design.md  2026-07-16-revision-diff-design.md  2026-07-17-plan-3b-design.md  2026-07-17-plan-3c-design.md
pipeline/: __init__.py  build_web.py  ingest.py  metrics.py  models.py  parse.py  quality.py  revisions.py  run.py  transform.py  transform.sql  valet_client.py
site/: index.html
site/data/: data_quality.json  manifest.json  panel_households.json  panel_markets.json  panel_policy.json  panel_target.json  revisions.json
site/i18n/: en.json  fr.json
tests/: test_build_web.py  test_ingest.py  test_metrics.py  test_models.py  test_parse.py  test_quality.py  test_revisions.py  test_revisions_real_vintages.py  test_run_revisions.py  test_site_i18n.py  test_smoke.py  test_transform.py  test_valet_client.py
(+10 files in other folders)
